--- a/.config/polybar/forest/modules.ini
+++ b/.config/polybar/forest/modules.ini
@@ -46,7 +46,7 @@ master-mixer = Master
 
 ; Interval for volume increase/decrease (in percent points)
 ; Default: 5
-interval = 5
+interval = 7
 
 ; Available tags:
 ;   <label-volume> (default)
@@ -59,7 +59,7 @@ format-volume = <ramp-volume> <label-volume>
 ;   <ramp-volume>
 ;   <bar-volume>
 format-muted = <label-muted>
-format-muted-prefix = 
+format-muted-prefix = ﱝ 
 format-muted-prefix-foreground = ${color.red}
 
 ; Available tokens:
@@ -72,9 +72,9 @@ label-muted = " Muted"
 label-muted-foreground = ${color.sep}
 
 ; Only applies if <ramp-volume> is used
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
+ramp-volume-0 = 奄
+ramp-volume-1 = 奔
+ramp-volume-2 = 墳
 ramp-volume-foreground = ${color.blue}
 
 ; If defined, it will replace <ramp-volume> when
@@ -106,11 +106,11 @@ format = <ramp> <label>
 label = %percentage%%
 
 ; Only applies if <ramp> is used
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 =  
+ramp-4 =  
 ramp-foreground = ${color.lime}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -347,7 +347,7 @@ interval = 1
 ;   <ramp-coreload>
 ;;format = <label> <ramp-coreload>
 format = <label>
-format-prefix = 
+format-prefix = 
 format-prefix-foreground = ${color.yellow}
 
 ; Available tokens:
@@ -637,7 +637,7 @@ interval = 1
 ;   <ramp-swap-used>
 ;   <ramp-swap-free>
 format = <label>
-format-prefix = 
+format-prefix = 
 format-prefix-foreground = ${color.blue}
 
 ; Available tokens:
@@ -815,13 +815,13 @@ unknown-as-up = true
 ;   <label-connected> (default)
 ;   <ramp-signal>
 format-connected = <label-connected>
-format-connected-prefix = 
+format-connected-prefix =   
 format-connected-prefix-foreground = ${color.purple}
 
 ; Available tags:
 ;   <label-disconnected> (default)
 format-disconnected = <label-disconnected>
-format-disconnected-prefix = 
+format-disconnected-prefix = 睊
 format-disconnected-prefix-foreground = ${color.orange}
 
 ; Available tags:
@@ -1204,7 +1204,8 @@ interval = 1
 type = custom/ipc
 inital = 1
 hook-0 = echo "%{A1:notify-send "DUNST_COMMAND_PAUSE" && polybar-msg hook ipc-dunst 2:}%{A}" &
-hook-1 = echo "%{A1:notify-send "DUNST_COMMAND_RESUME" && polybar-msg hook ipc-dunst 1:}%{F#ff2200}%{F-}${A}" &
+; hook-1 = echo "%{A1:notify-send "DUNST_COMMAND_RESUME" && polybar-msg hook ipc-dunst 1:}%{F#ff2200}%{F-}${A}" &
+; hook-1 = echo "%{A1:notify-send "DUNST_COMMAND_RESUME" && polybar-msg hook ipc-dunst 1:}%{F#ff2200}%{F-}${A}" &
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
