--- a/.config/polybar/forest/config.ini
+++ b/.config/polybar/forest/config.ini
@@ -130,9 +130,11 @@ module-margin-right = 1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Iosevka Nerd Font:size=11;4"
+; font-0 = "Iosevka Nerd Font:size=11;4"
+; font-0 = "FiraCode Nerd Font:size=11;4"
+font-0 = "Hack Nerd Font:size=11;4"
 ; font-0 = "ClearSans-Medium:size=11;4"
-font-1 = "Iosevka Nerd Font:size=10;3"
+font-1 = "FontAwesome:size=10;3"
 font-2 = "feather:size=12;3"
 
 ; Modules are added to one of the available blocks
@@ -140,9 +142,9 @@ font-2 = "feather:size=12;3"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = launcher sep workspaces sep cpu memory battery-da dunst-dnd 
+modules-left = launcher sep workspaces sep cpu memory battery-da 
 modules-center = date time
-modules-right = network sep pulseaudio backlight sep sysmenu
+modules-right = network sep alsa backlight sep dunst-dnd sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
