--- a/.config/polybar/forest/user_modules.ini
+++ b/.config/polybar/forest/user_modules.ini
@@ -65,7 +65,7 @@ click-right = exo-open --launch TerminalEmulator &
 [module/launcher]
 type = custom/text
 
-content = 
+content = 
 content-foreground = ${color.purple}
 
 ; "click-(left|middle|right)" will be executed using "/usr/bin/env sh -c $COMMAND"
@@ -80,7 +80,7 @@ click-left = rofi -show drun -show-icons &
 [module/sysmenu]
 type = custom/text
 
-content = 
+content = ⏻
 content-foreground = ${color.cyan}
 
 click-left = ~/.config/polybar/forest/scripts/powermenu.sh &
@@ -107,6 +107,7 @@ content-foreground = ${color.sep}
 
 [module/apps]
 type = custom/text
+content = 
 
 [module/term]
 inherit = module/apps
