i3: fix autotiling script polybar: fix volume module (mostly) nixos configuration.nix: add pkgs.pulseaudio for compat in polybar script

--- a/.config/polybar/forest/config.ini
+++ b/.config/polybar/forest/config.ini
@@ -144,7 +144,7 @@ font-2 = "feather:size=12;3"
 
 modules-left = launcher sep workspaces sep cpu memory battery-da 
 modules-center = date time
-modules-right = network sep alsa backlight sep dunst-dnd sysmenu
+modules-right = network sep pipewire backlight sep dunst-dnd sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
