--- a/.config/polybar/forest/modules.ini
+++ b/.config/polybar/forest/modules.ini
@@ -46,7 +46,7 @@ master-mixer = Master
 
 ; Interval for volume increase/decrease (in percent points)
 ; Default: 5
-interval = 7
+interval = 5
 
 ; Available tags:
 ;   <label-volume> (default)
@@ -922,6 +922,26 @@ ramp-volume-foreground = ${color.blue}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
+[module/pipewire]
+type = custom/ipc
+
+label = "%output%"
+label-font = 1
+
+hook-0 = ~/.config/polybar/forest/scripts/pipewire.sh
+hook-1 = ~/.config/polybar/forest/scripts/pipewire.sh up
+hook-2 = ~/.config/polybar/forest/scripts/pipewire.sh down
+hook-3 = ~/.config/polybar/forest/scripts/pipewire.sh mute
+hook-4 = sleep 1 && ~/.config/polybar/forest/scripts/pipewire.sh
+initial = 5
+
+scroll-up = exec polybar-msg action "#pipewire.hook.1"
+scroll-down = exec polybar-msg action "#pipewire.hook.2"
+click-left = exec polybar-msg action "#pipewire.hook.3"
+click-right = exec kitty pulsemixer &
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
 [module/volume]
 ; type = internal/volume
 
@@ -1212,11 +1232,11 @@ hook-0 = echo "%{A1:notify-send "DUNST_COMMAND_PAUSE" && polybar-msg hook ipc-du
 [module/pipewire-simple]
 type = custom/script
 exec = ~/.config/polybar/forest/scripts/pipewire-simple.sh
-interval = 0.00001
-click-right = alacritty -e pulsemixer &
-click-left = pulsemixer --toggle-mute &
-scroll-up = pulsemixer --change-volume +5 &
-scroll-down = pulsemixer --change-volume -5 &
+interval = 0.1
+click-right = kitty pulsemixer &
+click-left = ~/.config/polybar/forest/scripts/pipewire-simple.sh toggle-mute &
+scroll-up = ~/.config/polybar/forest/scripts/pipewire-simple.sh volume-up &
+scroll-down = ~/.config/polybar/forest/scripts/pipewire-simple.sh volume-down &
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 [module/dunst-dnd]
