--- a/.config/i3/config
+++ b/.config/i3/config
@@ -286,7 +286,7 @@ exec --no-startup-id lxpolkit
 # exec dnfdragora-updater
 
 # autotiling for i3
-exec_always --no-startup-id i3-autotiling
+exec_always --no-startup-id autotiling
 
 # dunst notification daemon
 exec_always --no-startup-id "$HOME/.config/dunst/launch.sh"
