--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,10 +30,15 @@ set $ws10 "10"
 set $mod Mod4
 
 # Use pactl to adjust volume in PulseAudio.
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+# bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
+# bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
+# bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+# bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+
+# Polybar hook compat
+bindsym XF86AudioRaiseVolume exec --no-startup-id polybar-msg action "#pipewire.hook.1"
+bindsym XF86AudioLowerVolume exec --no-startup-id polybar-msg action "#pipewire.hook.2"
+bindsym XF86AudioMute exec --no-startup-id polybar-msg action "#pipewire.hook.3"
 
 bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause && $refresh_i3status
 
