--- a/.config/polybar/forest/config.ini
+++ b/.config/polybar/forest/config.ini
@@ -61,7 +61,8 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-height = 34
+; height = 26
+height = 3%
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -130,9 +131,9 @@ module-margin-right = 1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-; font-0 = "Iosevka Nerd Font:size=11;4"
+font-0 = "Iosevka Nerd Font:size=10;4"
 ; font-0 = "FiraCode Nerd Font:size=11;4"
-font-0 = "Hack Nerd Font:size=11;4"
+; font-0 = "Hack Nerd Font:size=8;4"
 ; font-0 = "ClearSans-Medium:size=11;4"
 font-1 = "FontAwesome:size=10;3"
 font-2 = "feather:size=12;3"
@@ -144,7 +145,7 @@ font-2 = "feather:size=12;3"
 
 modules-left = launcher sep workspaces sep cpu memory battery-da 
 modules-center = date time
-modules-right = network sep pipewire backlight sep dunst-dnd sysmenu
+modules-right = network sep alsa backlight sep dunst-dnd sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
