--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,15 +30,10 @@ set $ws10 "10"
 set $mod Mod4
 
 # Use pactl to adjust volume in PulseAudio.
-# bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
-# bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
-# bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-# bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-
-# Polybar hook compat
-bindsym XF86AudioRaiseVolume exec --no-startup-id polybar-msg action "#pipewire.hook.1"
-bindsym XF86AudioLowerVolume exec --no-startup-id polybar-msg action "#pipewire.hook.2"
-bindsym XF86AudioMute exec --no-startup-id polybar-msg action "#pipewire.hook.3"
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause && $refresh_i3status
 
@@ -52,7 +47,7 @@ bindsym Ctrl+$mod+Shift+Up exec --no-startup-id brightnessctl set 5%+ && $refres
 bindsym Ctrl+$mod+Shift+Down exec --no-startup-id brightnessctl set 5%- && $refresh_i3status
 
 # keybinding to lock screen
-bindsym $mod+l exec "~/.config/betterlockscreen/launch.sh"
+bindsym $mod+l exec "~/.config/i3/lock-screen.sh"
 # alternatively use loginctl to auto-find best lock-screen
 # bindsym $mod+l exec "loginctl lock-session"
 
@@ -272,10 +267,10 @@ exec xinput --set-prop 9 'libinput Accel Profile Enabled' 0, 1
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- ~/.config/betterlockscreen/launch.sh
+exec --no-startup-id xss-lock --transfer-sleep-lock -- ~/.config/i3/lock-screen.sh
 
 # auto-lock the screen after 3 minutes
-exec xautolock -detectsleep -time 15 -locker "~/.config/betterlockscreen/launch.sh"
+exec xautolock -detectsleep -time 15 -locker "~/.config/i3/lock-screen.sh"
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
