--- a/.config/polybar/forest/config.ini
+++ b/.config/polybar/forest/config.ini
@@ -131,7 +131,7 @@ module-margin-right = 1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Iosevka Nerd Font:size=10;4"
+font-0 = "Iosevka Nerd Font:size=11;4"
 ; font-0 = "FiraCode Nerd Font:size=11;4"
 ; font-0 = "Hack Nerd Font:size=8;4"
 ; font-0 = "ClearSans-Medium:size=11;4"
@@ -143,9 +143,9 @@ font-2 = "feather:size=12;3"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = launcher sep workspaces sep cpu memory battery-da 
-modules-center = date time
-modules-right = network sep alsa backlight sep dunst-dnd sysmenu
+modules-left = launcher sep workspaces 
+; modules-center = date time
+modules-right = battery-da memory cpu network sep dunst-dnd alsa backlight sep date time sep sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
