--- a/.config/polybar/forest/modules.ini
+++ b/.config/polybar/forest/modules.ini
@@ -375,16 +375,16 @@ interval = 1.0
 
 ; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
 ; NOTE: if you want to use syntax tags here you need to use %%{...}
-date = %A, %d %B
+date = %d/%m/%Y
 
 ; if `date-alt` is defined, clicking
 ; the module will toggle between formats
-date-alt = %A, %d %B %Y
+date-alt = %A, %d %b %Y
 
 ; Available tags:
 ;   <label> (default)
 format = <label>
-format-prefix = " "
+format-prefix = ""
 format-prefix-foreground = ${color.red}
 
 ; Available tokens:
