--- a/.config/polybar/forest/user_modules.ini
+++ b/.config/polybar/forest/user_modules.ini
@@ -83,7 +83,7 @@ type = custom/text
 content = ⏻
 content-foreground = ${color.cyan}
 
-click-left = ~/.config/polybar/forest/scripts/powermenu.sh &
+click-left = ~/.scripts/rofi-powermenu.sh &
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
