(polybar alsa module) show volume when muted, (nixos) remove i3wm

--- a/.config/polybar/forest/modules.ini
+++ b/.config/polybar/forest/modules.ini
@@ -68,7 +68,7 @@ label-volume = %percentage%%
 
 ; Available tokens:
 ;   %percentage% (default
-label-muted = " Muted"
+label-muted = " %percentage%"
 label-muted-foreground = ${color.sep}
 
 ; Only applies if <ramp-volume> is used
