polybar: clean up and switch to pulseaudio module

--- a/.config/polybar/forest/config.ini
+++ b/.config/polybar/forest/config.ini
@@ -145,7 +145,7 @@ font-2 = "feather:size=12;3"
 
 modules-left = launcher sep workspaces 
 ; modules-center = date time
-modules-right = battery-da memory cpu network sep dunst-dnd alsa backlight sep date time sep sysmenu
+modules-right = battery-da memory cpu network sep dunst-dnd pulseaudio backlight sep date time sep sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
