add picom conf, change a leftwm keybind, change picom config leftwm

--- a/.config/leftwm/config.toml
+++ b/.config/leftwm/config.toml
@@ -45,7 +45,7 @@ key = "period"
 [[keybind]]
 command = "Execute"
 value = "kitty"
-modifier = ["modkey", "Shift"]
+modifier = ["modkey"]
 key = "Return"
 
 [[keybind]]
