add abbrevs, update path with cargo bin, fix leftwm tokyonight theme paths

--- a/.config/leftwm/themes/tokyonight/polybar/forest/config.ini
+++ b/.config/leftwm/themes/tokyonight/polybar/forest/config.ini
@@ -23,10 +23,10 @@ margin-top = 0
 ;; File Inclusion
 ; include an external file, like module file, etc.
 
-include-file = ~/.config/polybar/forest/bars.ini
-include-file = ~/.config/polybar/forest/colors.ini
-include-file = ~/.config/polybar/forest/modules.ini
-include-file = ~/.config/polybar/forest/user_modules.ini
+include-file = ~/.config/leftwm/themes/current/polybar/forest/bars.ini
+include-file = ~/.config/leftwm/themes/current/polybar/forest/colors.ini
+include-file = ~/.config/leftwm/themes/current/polybar/forest/modules.ini
+include-file = ~/.config/leftwm/themes/current/polybar/forest/user_modules.ini
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -143,8 +143,7 @@ font-2 = "feather:size=12;3"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = launcher sep workspaces 
-; modules-center = date time
+modules-left = launcher sep workspaces layout layout0 layout1
 modules-right = battery-da memory cpu network sep dunst-dnd pulseaudio backlight sep date time sep sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
