--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -1,1 +1,35 @@
-theme = "onedark"
+theme = "tokyonight"
+
+[editor]
+line-number = "relative"
+auto-completion = true
+auto-info = true
+completion-trigger-len = 2
+true-color = true
+shell = ["zsh", "-c"]
+
+[editor.cursor-shape]
+insert = "bar"
+normal = "block"
+select = "underline"
+
+[editor.file-picker]
+hidden = false
+git-global = true
+git-ignore = true
+parents = true
+
+[editor.lsp]
+display-messages = true
+
+[editor.auto-pairs]
+'(' = ')'
+'{' = '}'
+'[' = ']'
+'"' = '"'
+'`' = '`'
+'<' = '>'
+
+[editor.search]
+smart-case = true
+wrap-around = true
