--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -7,6 +7,7 @@ auto-info = true
 completion-trigger-len = 2
 true-color = true
 shell = ["zsh", "-c"]
+scrolloff = 1000
 
 [editor.cursor-shape]
 insert = "bar"
