chore(vscode workspace): :wrench: add "gnome", "vscode workspace" to conventioncal commits scope

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "nuxt.isNuxtApp": false,
     "conventionalCommits.scopes": [
-        "script"
+        "script",
+        "gnome",
+        "vscode workspace"
     ]
 }
