feat(zsh): :sparkles: set up history in ZSH, replacing Atuin history management

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
     "nuxt.isNuxtApp": false,
     "conventionalCommits.scopes": [
+        "vscode workspace",
         "script",
         "gnome",
-        "vscode workspace"
+        "zsh"
     ]
 }
