--- a/dots/.config/atuin/config.toml
+++ b/dots/.config/atuin/config.toml
@@ -28,7 +28,7 @@
 
 ## which search mode to use
 ## possible values: prefix, fulltext, fuzzy
-search_mode = "prefix"
+search_mode = "fuzzy"
 
 ## which style to use
 ## possible values: auto, full, compact
